fix: address CodeRabbit feedback for catalog filtering